# cmake-build-practice

./: CMakeLists.txt  calculator  notes.txt
.devcontainer/: devcontainer.json
Project1/: CMakeLists.txt  main.cpp  old-makefile-old.txt
Project1/my_math/: CMakeLists.txt
Project1/my_math/include/my_math/: division.h
Project1/my_math/src/: addition.cpp  division.cpp
Project1/my_print/: CMakeLists.txt
Project1/my_print/include/my_print/: print_result.h
Project1/my_print/src/: print_result.cpp
Project2/: CMakeLists.txt  main.cpp
